[gd_scene load_steps=5 format=3 uid="uid://f7tw4wikjads"]

[ext_resource type="Script" path="res://rythm_game/results_screen/ResultRating.gd" id="1"]
[ext_resource type="StyleBox" uid="uid://btifk3vr00fwd" path="res://styles/ResultRatingStyleEven.tres" id="1_3rfje"]
[ext_resource type="FontVariation" uid="uid://ccdyv65ubusey" path="res://fonts/default_font_black.tres" id="2"]

[sub_resource type="FontFile" id="1"]
fallbacks = Array[Font]([ExtResource("2")])
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/30/0/ascent = 0.0
cache/0/30/0/descent = 0.0
cache/0/30/0/underline_position = 0.0
cache/0/30/0/underline_thickness = 0.0
cache/0/30/0/scale = 1.0

[node name="Panel" type="PanelContainer"]
custom_minimum_size = Vector2(0, 50)
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 62.0
grow_horizontal = 2
size_flags_vertical = 3
theme_override_styles/panel = ExtResource("1_3rfje")
script = ExtResource("1")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="RatingRect" type="TextureRect" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
texture_filter = 6
layout_mode = 2
size_flags_horizontal = 3
expand_mode = 2
stretch_mode = 4

[node name="ValueLabel3" type="HBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0

[node name="TotalLabel" type="Label" parent="MarginContainer/HBoxContainer/ValueLabel3"]
auto_translate_mode = 2
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 10
theme_override_fonts/font = SubResource("1")
text = "(NT)407/"
horizontal_alignment = 1
vertical_alignment = 2

[node name="PercentageLabel" type="Label" parent="MarginContainer/HBoxContainer/ValueLabel3"]
auto_translate_mode = 2
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 10
theme_override_fonts/font = SubResource("1")
text = "(NT)407/"
horizontal_alignment = 1
vertical_alignment = 2
